<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaksi_pembelian_rumah"
        android:text_Size="22sp"
        android:centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <TableLayout
        android:id="@+id/tblTable1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        >

        <TableRow>
            <TextView
                android:id="@+id/txtKode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode_beli"
                android:text_Size="18sp"
                android:marginStart="20dp"
                />
            <EditText
                android:id="@+id/editKode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/inkode_beli"
                android:text_Size="18sp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txtNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_pembeli"
                android:text_Size="18sp"
                android:marginStart="20dp"
                />
            <EditText
                android:id="@+id/editNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/innama_pembeli"
                android:text_Size="18sp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_rumah"
                android:text_Size="18sp"
                android:marginStart="20dp"
                />
            <EditText
                android:id="@+id/editHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/inharga_rumah"
                android:text_Size="18sp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtUang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uang_muka"
                android:text_Size="18sp"
                android:marginStart="20dp"
                />
            <EditText
                android:id="@+id/editUang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/inuang_muka"
                android:text_Size="18sp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_bayar"
                android:text_Size="18sp"
                android:marginStart="20dp"
                />
            <EditText
                android:id="@+id/editTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/intanggal_pembayar"
                android:text_Size="18sp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtDiskon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/persentase_diskon"
                android:text_Size="18sp"
                android:marginStart="20dp"
                />
            <EditText
                android:id="@+id/editDiskon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/inpersentase_diskon"
                android:text_Size="18sp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtTipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipe_rumah"
                android:text_Size="18sp"
                android:marginStart="20dp"
                android:marginTop="20dp"
                />
            <Spinner
                android:id="@+id/spinTipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intipe_rumah"
                android:text_Size="18sp"
                android:marginTop="20dp"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtJenis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kavling"
                android:text_Size="18sp"
                android:marginStart="20dp"
                android:marginTop="20dp"
                />
            <Spinner
                android:id="@+id/spinJenis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/injenis_kavling"
                android:text_Size="18sp"
                android:marginStart="20dp"
                android:marginTop="20dp"
                />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtBayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tblTable1"
        android:layout_marginTop="0dp"
        android:marginStart="50dp"
        android:text="@string/cara_bayar"
        android:text_Size="18sp" />

    <RadioGroup
        android:id="@+id/rgBayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBayar"
        android:marginStart="30dp"
        >
        <RadioButton
            android:id="@+id/rbLunas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunas"
            android:text_Size="18sp"
            android:marginStart="100dp"
            />
        <RadioButton
            android:id="@+id/rbKon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr_konvensional"
            android:text_Size="18sp"
            />
        <RadioButton
            android:id="@+id/rbKRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kpr_syariah"
            android:text_Size="18sp"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/txtBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bonus"
        android:text_Size="18sp"
        android:marginStart="30dp"
        android:layout_below="@+id/rgBayar"
        />
        <TableLayout
            android:id="@+id/tblTable2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtBonus"
            android:layout_marginStart="20dp"
            >
            <TableRow>
                <CheckBox
                    android:id="@+id/chkKitchen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kitchen_set"
                    android:text_Size="18sp"
                    android:marginStart="20dp"
                    />
                <CheckBox
                    android:id="@+id/chkTaman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taman"
                    android:text_Size="18sp"
                    android:marginStart="20dp"
                    />
                <CheckBox
                    android:id="@+id/chkAC1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ac_1_pk"
                    android:text_Size="18sp"
                    android:marginStart="20dp"
                    />
                <CheckBox
                    android:id="@+id/chkAC2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ac_1_2_pk"
                    android:text_Size="18sp"
                    android:marginStart="20dp"
                    />
                <CheckBox
                    android:id="@+id/chkLemari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lemari_2_pintu"
                    android:text_Size="18sp"
                    android:marginStart="20dp"
                    />
            </TableRow>
        </TableLayout>
    <Button
        android:id="@+id/btnProses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proses"
        android:text_Size="18sp"
        android:marginStart="20dp"
        android:marginEnd="20dp"
        android:layout_below="@+id/tblTable2"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaksi_pembelian"
        android:text_Size="18sp"
        android:marginStart="20dp"
        android:layout_below="@+id/btnProses"
        android:layout_marginTop="20dp"
        />
</RelativeLayout>